replaced MudPaper with Div

--- a/PaymentJournal.Web/Pages/Components/AccountLists.razor
+++ b/PaymentJournal.Web/Pages/Components/AccountLists.razor
@@ -1,4 +1,4 @@
-﻿<MudPaper Width="30%" Square="false" Class="pa-5 ma-2 infobox" Outlined="true">
+﻿<div class="pa-5 ma-2 infobox" style="max-width: 300px">
     <MudText>Account Legend</MudText>
     <MudSimpleTable Class="bg-trans" Outlined="false" Dense="true" Elevation="0">
         <thead>
@@ -18,4 +18,4 @@
             }
         </tbody>
     </MudSimpleTable>
-</MudPaper>
+</div>
