--- a/PaymentJournal.Web/Pages/Components/Payments.razor
+++ b/PaymentJournal.Web/Pages/Components/Payments.razor
@@ -2,8 +2,9 @@
 
 <PageTitle>@Budget.Name - Payments</PageTitle>
 
-<MonthYearSelector ReturnURL="@GetReturnURL" OnSearch="@Search" />
+<MudButton Variant="Variant.Filled" OnClick="() => NavigateToBudget()" StartIcon="@Icons.Filled.Folder" Color="Color.Primary">Return to Budget</MudButton>
 
+<MonthYearSelector ReturnURL="@GetReturnURL" OnSearch="@Search" />
 
 <div class="pa-5 ma-2 infobox">
 <MudButton StartIcon="@Icons.Filled.PostAdd" OnClick="() => NavToPayments()" Variant="Variant.Filled" Size="Size.Small" Color="Color.Primary">Insert Payment</MudButton>
