--- a/PaymentJournal.Web/Pages/Components/Budget_View.razor
+++ b/PaymentJournal.Web/Pages/Components/Budget_View.razor
@@ -10,12 +10,12 @@
             <tr>
                 <td><MudText Typo="Typo.h5" Class="textsilver">Monthly Budget</MudText></td>
                 <td class="float-end">
-                    <MudButton Variant="Variant.Filled" OnClick="() => NavigateToPayments(Budget.BudgetId)" StartIcon="@Icons.Filled.Payment" Color="Color.Success">Payments</MudButton>
-                    <MudButton Variant="Variant.Filled" OnClick="() => NavigateToBudgets()" StartIcon="@Icons.Filled.Folder" Color="Color.Primary">Budgets</MudButton>
+                    <MudButton Variant="Variant.Filled" OnClick="() => NavigateToPayments(Budget.BudgetId)" StartIcon="@Icons.Material.Filled.Payment" Color="Color.Success">Payments</MudButton>
+                    <MudButton Variant="Variant.Filled" OnClick="() => NavigateToBudgets()" StartIcon="@Icons.Material.Filled.Folder" Color="Color.Primary">Budgets</MudButton>
                 </td>
             </tr>
         </MudSimpleTable>
-        <MudSwitch @bind-Checked="@EditMode" Label="Edit Mode" Color="Color.Success" />
+        <MudSwitch @bind-Value="@EditMode" Label="Edit Mode" Color="Color.Success" />
     </div>
 
 
@@ -114,7 +114,7 @@
                     <MudSimpleTable Class="bg-trans" Outlined="false" Elevation="0" Dense="true" Hover="true" Bordered="true">
                         <tr>
                             <td class="p-1 text-end">Half Monthly Expenses:</td>
-                            <td class="blue_text">@(FormatMoney(Budget.TotalMonthlyExpenses / 2))</td>
+                            <td title="Sum(Expenses) / 2" class="blue_text">@(FormatMoney(Budget.TotalMonthlyExpenses / 2))</td>
                         </tr>
                         <tr>
                             <td class="p-1 text-end">Debt-To-Income Ratio:</td>
@@ -122,7 +122,7 @@
                         </tr>
                         <tr>
                             <td class="p-1 text-end">Yearly Witholdings:</td>
-                            <td title="Annual Salary - Yearly Income" class="blue_text">@(Budget.YearlyWitholdings.ToString("C"))</td>
+                            <td title="Annual Salary - Yearly Income [AnualSalary - Sum(Incomes)*12]" class="blue_text">@(Budget.YearlyWitholdings.ToString("C"))</td>
                         </tr>
                     </MudSimpleTable>
                 </MudPaper>
@@ -250,7 +250,7 @@
                         <td><MudTextField Disabled="Disabled" @bind-Value="item.Bank" Variant="Variant.Text" /></td>
                         <td><MudTextField Disabled="Disabled" @bind-Value="item.AttachedTo" Variant="Variant.Text" /></td>
                         <td><MudTextField Disabled="Disabled" @bind-Value="item.Description" Variant="Variant.Text" /></td>
-                        <td><MudCheckBox Disabled="Disabled" Label="Debt" @bind-Checked="@item.IsDebt" Color="Color.Primary"></MudCheckBox></td>
+                        <td><MudCheckBox Disabled="Disabled" Label="Debt" @bind-Value="@item.IsDebt" Color="Color.Primary"></MudCheckBox></td>
                     </tr>
                 }
             </tbody>
