fixed Budget_view calling FormatMoney parameter being passed in incorrectly

--- a/PaymentJournal.Web/Pages/Components/Budget_View.razor
+++ b/PaymentJournal.Web/Pages/Components/Budget_View.razor
@@ -122,7 +122,7 @@
                         </tr>
                         <tr>
                             <td class="p-1 text-end">Yearly Witholdings:</td>
-                            <td title="Annual Salary - Yearly Income [AnualSalary - Sum(Incomes)*12]" class="blue_text">@(FormatMoney(Budget.YearlyWitholdings.ToString("C")))</td>
+                            <td title="Annual Salary - Yearly Income [AnualSalary - Sum(Incomes)*12]" class="blue_text">@(FormatMoney(Budget.YearlyWitholdings))</td>
                         </tr>
                     </MudSimpleTable>
                 </MudPaper>
