--- a/PaymentJournal.Web/Shared/SinglePage.razor
+++ b/PaymentJournal.Web/Shared/SinglePage.razor
@@ -3,6 +3,8 @@
 <MudThemeProvider IsDarkMode="true" />
 <MudDialogProvider />
 <MudSnackbarProvider />
+<MudPopoverProvider />
+
 
 <PageTitle>Payment Journal</PageTitle>
 
