--- a/PaymentJournal.Web/Pages/_Host.cshtml
+++ b/PaymentJournal.Web/Pages/_Host.cshtml
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/github-dark-dimmed.min.css">
+    @* <link rel="stylesheet" href="styles/github-dark-dimmed.min.css"> *@
     <link href="css/site.css" rel="stylesheet" />
 
 
