--- a/PaymentJournal.Web/Shared/SinglePage.razor
+++ b/PaymentJournal.Web/Shared/SinglePage.razor
@@ -1,15 +1,16 @@
 ﻿@inherits LayoutComponentBase
-
 <MudThemeProvider IsDarkMode="true" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 <MudPopoverProvider />
-
-
 <PageTitle>Payment Journal</PageTitle>
 
+@Body
 
-    @Body
-
-
-
+@*
+<MudLayout>
+    <MudMainContent>
+        @Body
+    </MudMainContent>
+</MudLayout>
+*@
