--- a/PaymentJournal.Web/Pages/_Host.cshtml
+++ b/PaymentJournal.Web/Pages/_Host.cshtml
@@ -10,12 +10,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    @* <link rel="stylesheet" href="styles/github-dark-dimmed.min.css"> *@
     <link href="css/site.css" rel="stylesheet" />
+    <link href="PaymentJournal.Web.styles.css" rel="stylesheet">
 
 
     @*<link href="PaymentJournal.Web.styles.css" rel="stylesheet" />*@
@@ -35,7 +35,7 @@
         <a class="dismiss">🗙</a>
     </div>
     @*<script src="_content/highlight.min.js"></script>*@
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 </html>
