--- a/PaymentJournal.Web/Shared/NoLayout.razor
+++ b/PaymentJournal.Web/Shared/NoLayout.razor
@@ -1,10 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
+<MudThemeProvider/>
+<MudDialogProvider />
+<MudSnackbarProvider />
+<MudPopoverProvider />
 <PageTitle>Payment Journal</PageTitle>
 
 
-
-    @Body
-
-
+        @Body
 
