--- a/PaymentJournal.Web/Pages/Components/Payments.razor
+++ b/PaymentJournal.Web/Pages/Components/Payments.razor
@@ -38,8 +38,8 @@
                     <tr>
                         <td>
                             <MudButtonGroup Color="Color.Primary" Variant="Variant.Text" OverrideStyles="false">
-                                <MudIconButton OnClick="() => DeleteDocument(item)" Title="Delete Payment" Icon="@Icons.Material.Filled.Delete" Variant="Variant.Filled" Color="Color.Error" Size="Size.Small" />
-                                <MudIconButton OnClick="() => EditDocument(item)" Title="Edit Payment" Icon="@Icons.Material.Filled.Edit" Variant="Variant.Filled" Color="Color.Primary" Size="Size.Small" />
+                                <MudIconButton OnClick="() => DeleteDocument(item)" Icon="@Icons.Material.Filled.Delete" Variant="Variant.Filled" Color="Color.Error" Size="Size.Small" />
+                                <MudIconButton OnClick="() => EditDocument(item)" Icon="@Icons.Material.Filled.Edit" Variant="Variant.Filled" Color="Color.Primary" Size="Size.Small" />
                             </MudButtonGroup>
                         </td>
                         <td hidden>@item.PaymentItemId</td>
