--- a/PaymentJournal.Web/Pages/_Host.cshtml
+++ b/PaymentJournal.Web/Pages/_Host.cshtml
@@ -37,5 +37,7 @@
     @*<script src="_content/highlight.min.js"></script>*@
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="clipboard.js"></script>
+
 </body>
 </html>
