--- a/PaymentJournal.Web/Pages/Components/SimpleDialog.razor
+++ b/PaymentJournal.Web/Pages/Components/SimpleDialog.razor
@@ -10,11 +10,11 @@
 
 
 @code {
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; }
+    [CascadingParameter] MudDialogInstance MudDialog { get; set; } = null !;
 
-    [Parameter] public string ContentText { get; set; }
+    [Parameter] public string ContentText { get; set; } = null !;
 
-    [Parameter] public string ButtonText { get; set; }
+    [Parameter] public string ButtonText { get; set; } = null !;
 
     [Parameter] public Color Color { get; set; }
 
